--- a/public/materi.html
+++ b/public/materi.html
@@ -50,7 +50,7 @@
   <div id="navbar-container"></div>
 
   <main class="container py-4">
-    <h1 class="text-center mb-4 fw-bold text-primary">Materi Memory Allocation</h1>
+    <h1 class="text-center mb-4 fw-bold text-light">Materi Memory Allocation</h1>
 
     <!-- 🔹 Navigasi Sub-Page -->
     <nav class="nav nav-pills justify-content-center mb-4 flex-wrap">
@@ -62,6 +62,7 @@
     </nav>
 
     <!-- Pendahuluan -->
+     
    <section class="materi-section">
   <h2>Pengertian dan Fungsi Manajemen Memori</h2>
   <p>
