--- a/public/profil.html
+++ b/public/profil.html
@@ -14,7 +14,62 @@
   <div id="navbar-container"></div>
 
   <div>
-    <!-- Ngoding mulainya disini tod -->
+    <section class="about-section">
+      <h1>Tentang Alloc</h1>
+      <p>
+        Alloc adalah platform simulasi edukatif yang dirancang untuk membantu mahasiswa memahami konsep
+        <b>alokasi memori</b> melalui pendekatan interaktif. Website ini menyediakan fitur simulasi, materi,
+        dan latihan soal yang dikembangkan dengan desain modern agar pembelajaran menjadi lebih menarik
+        dan mudah dipahami.
+      </p>
+    </section>
+
+    <!-- Tim -->
+    <section class="team-section">
+      <h2>Tim Pengembang</h2>
+      <div class="team-container">
+        <div class="team-row">
+          <div class="member-card">
+            <div class="avatar">F</div>
+            <h5>Fariez</h5>
+
+          </div>
+          <div class="member-card">
+            <div class="avatar">A</div>
+            <h5>Adil</h5>
+
+          </div>
+          <div class="member-card">
+            <div class="avatar">F</div>
+            <h5>Fadhli</h5>
+
+          </div>
+        </div>
+
+        <div class="team-row">
+          <div class="member-card">
+            <div class="avatar">R</div>
+            <h5>Ripki</h5>
+
+          </div>
+          <div class="member-card">
+            <div class="avatar">F</div>
+            <h5>Farrel</h5>
+
+          </div>
+          <div class="member-card">
+            <div class="avatar">R</div>
+            <h5>Rossyada</h5>
+
+          </div>
+          <div class="member-card">
+            <div class="avatar">R</div>
+            <h5>Reza</h5>
+
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
