--- a/public/materi.html
+++ b/public/materi.html
@@ -6,43 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Materi Memory Allocation</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/materi.css">
-  <style>
-    section {
-      display: none;
-    }
+  <link rel="stylesheet" href="css/style.css">
+  
 
-    section.active {
-      display: block;
-      animation: fadeIn 0.6s ease;
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(10px);
-      }
-
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    .nav-pills .nav-link {
-      cursor: pointer;
-      transition: background-color 0.3s, transform 0.2s;
-    }
-
-    .nav-pills .nav-link.active {
-      background-color: #0d6efd;
-      color: white !important;
-    }
-
-    .nav-pills .nav-link:hover {
-      transform: scale(1.05);
-    }
-  </style>
+   
 </head>
 
 <body>
@@ -50,7 +17,7 @@
   <div id="navbar-container"></div>
 
   <main class="container py-4">
-    <h1 class="text-center mb-4 fw-bold text-light">Materi Memory Allocation</h1>
+    <h1 class="text-center class mt-5 fw-bold text-light">Materi Memory Allocation</h1>
 
     <!-- 🔹 Navigasi Sub-Page -->
     <nav class="nav nav-pills justify-content-center mb-4 flex-wrap">
@@ -63,7 +30,7 @@
 
     <!-- Pendahuluan -->
      
-   <section class="materi-section">
+  <section id="pendahuluan" class="materi-section">
   <h2>Pengertian dan Fungsi Manajemen Memori</h2>
   <p>
     <strong>Manajemen Memori</strong> merupakan salah satu komponen terpenting dalam sistem operasi yang berfungsi untuk 
