--- a/public/materi.html
+++ b/public/materi.html
@@ -16,7 +16,7 @@
   <!-- Tempat navbar akan dimuat -->
   <div id="navbar-container"></div>
 
-  <main class="container py-4">
+  <main class="materi-container py-4">
     <h1 class="text-center class mt-5 fw-bold text-light">Materi Memory Allocation</h1>
 
     <!-- 🔹 Navigasi Sub-Page -->
@@ -106,7 +106,7 @@
 </section>
 
 
-<section id="jenis" class="mb-5">
+<section id="jenis" class="materi-section">
   <h2>Jenis Memory Allocation</h2>
   <p>
     <b>Memory allocation</b> adalah proses penting dalam manajemen memori yang bertujuan untuk menentukan
@@ -256,7 +256,7 @@
 </section>
 
 
-  <section id="algoritma" class="mb-5">
+  <section id="algoritma" class="materi-section">
   <h2>Algoritma Pengalokasian Memori</h2>
   <p>
     Dalam sistem <b>variable partitioning</b>, ukuran partisi tidak tetap — artinya sistem operasi harus
@@ -372,7 +372,7 @@
     algoritma adaptif yang dapat berubah tergantung kondisi beban memori dan pola proses.
   </div>
 </section>
-<section id="fragmentasi" class="mb-5">
+<section id="fragmentasi" class="materi-section">
   <h2>Fragmentasi Memori</h2>
   <p>
     <b>Fragmentasi memori</b> adalah kondisi di mana ruang memori tidak dapat digunakan secara optimal karena
@@ -463,7 +463,7 @@
 </section>
 
 
- <section id="contoh" class="mb-5">
+ <section id="contoh" class="materi-section">
   <h2>Contoh Kasus dan Analisis</h2>
   <p>
     Untuk memahami perbedaan efisiensi antar algoritma, perhatikan contoh berikut.
@@ -562,24 +562,7 @@
       untuk menyeimbangkan efisiensi dan kecepatan dalam pengelolaan memori.
     </div>
   </div>
-
-  <script>
-    // JavaScript sederhana untuk toggle jawaban
-    document.getElementById("toggleJawabanBtn").addEventListener("click", function () {
-      const jawaban = document.getElementById("jawabanContainer");
-      const btn = document.getElementById("toggleJawabanBtn");
-
-      if (jawaban.style.display === "none") {
-        jawaban.style.display = "block";
-        btn.textContent = "❌ Sembunyikan Jawaban";
-      } else {
-        jawaban.style.display = "none";
-        btn.textContent = "🔍 Tampilkan Jawaban";
-      }
-    });
-  </script>
 </section>
-
 
   </main>
 
