--- a/public/latihan.html
+++ b/public/latihan.html
@@ -15,7 +15,7 @@
   <div class="card-quiz">
     <div class="top-row">
       <div>
-        <h2 style="margin:0">Latihan Interaktif: Alokasi Memori</h2>
+        <h2 class="quiz-title-clean">Latihan Interaktif: Alokasi Memori</h2>
       </div>
       <div style="text-align:right">
         <div class="progress-text" id="progressText">Soal 1 dari 10</div>
