--- a/public/materi.html
+++ b/public/materi.html
@@ -28,6 +28,9 @@
       <button class="nav-link" onclick="showPage('contoh', event)">Contoh</button>
     </nav>
 
+
+    
+
     <!-- Pendahuluan -->
      
   <section id="pendahuluan" class="materi-section">
@@ -371,7 +374,25 @@
     Sistem operasi modern sering menggunakan kombinasi teknik atau bahkan 
     algoritma adaptif yang dapat berubah tergantung kondisi beban memori dan pola proses.
   </div>
+
+  <p class="intro-video">
+    Berikut adalah materi visual yang memberikan gambaran lebih jelas mengenai cara kerja 
+    masing-masing algoritma dalam proses alokasi memori. 
+    Tonton video berikut untuk memahami alurnya secara intuitif.
+  </p>
+
+
+   <div class="algoritma-video">
+        <iframe 
+            src="https://drive.google.com/file/d/1UfK6tozciUNRteBrhV13fwhcsKCrqQE_/preview"
+            allow="autoplay; fullscreen"
+            allowfullscreen>
+        </iframe>
+    </div>
+
 </section>
+
+
 <section id="fragmentasi" class="materi-section">
   <h2>Fragmentasi Memori</h2>
   <p>
@@ -565,6 +586,8 @@
 </section>
 
   </main>
+
+  
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/template.js"></script>
