--- a/public/profil.html
+++ b/public/profil.html
@@ -29,45 +29,48 @@
       <h2>Tim Pengembang</h2>
       <div class="team-container">
         <div class="team-row">
+
           <div class="member-card">
             <div class="avatar">F</div>
             <h5>Fariez</h5>
-
           </div>
+
           <div class="member-card">
             <div class="avatar">A</div>
             <h5>Adil</h5>
-
           </div>
+
           <div class="member-card">
             <div class="avatar">F</div>
             <h5>Fadhli</h5>
-
           </div>
-        </div>
 
-        <div class="team-row">
-          <div class="member-card">
-            <div class="avatar">R</div>
+          <div class="member-card ripki">
+            <div class="avatar flip">
+              <span class="front">R</span>
+              <span class="back">ACE</span>
+            </div>
             <h5>Ripki</h5>
-
           </div>
+
           <div class="member-card">
             <div class="avatar">F</div>
             <h5>Farrel</h5>
-
           </div>
+
           <div class="member-card">
             <div class="avatar">R</div>
             <h5>Rossyada</h5>
-
           </div>
+
           <div class="member-card">
             <div class="avatar">R</div>
             <h5>Reza</h5>
-
           </div>
+
         </div>
+
+
       </div>
     </section>
   </div>
