--- a/public/latihan.html
+++ b/public/latihan.html
@@ -7,7 +7,7 @@
   <title>Latihan Final - Alokasi Memori</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/latihan.css">
 
 </head>
 
