Change background color from #1c1f2b to #1a202c

--- a/public/landingpage.html
+++ b/public/landingpage.html
@@ -17,7 +17,7 @@
 
         body {
             font-family: "Poppins", sans-serif;
-            background: #1c1f2b; /* abu-abu gelap */
+            background: #1a202c;
             color: #fff;
             line-height: 1.6;
         }
@@ -28,7 +28,7 @@
             justify-content: space-between;
             align-items: center;
             padding: 20px 40px;
-            background: #1c1f2b;
+            background: #1a202c;
             position: sticky;
             top: 0;
             z-index: 1000;
@@ -95,7 +95,7 @@
 
         /* CTA Section */
         .cta-section {
-            background: #1c1f2b;
+            background: #1a202c;
             padding: 80px 20px;
             text-align: center;
         }
@@ -151,7 +151,7 @@
 
         /* Hero Section - About Memory */
         .hero {
-            background: #1c1f2b;
+            background: #1a202c;
             padding: 80px 20px;
             text-align: center;
         }
@@ -167,7 +167,7 @@
             margin: 30px auto;
             padding: 30px;
             border-radius: 15px;
-            background: #222436; /* abu-abu kotak */
+            background: #222436;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
             text-align: left;
         }
@@ -197,7 +197,7 @@
 
         /* Algorithms Section */
         .algorithms-section {
-            background: #1c1f2b;
+            background: #1a202c;
             padding: 80px 20px;
         }
 
@@ -282,7 +282,7 @@
         footer {
             text-align: center;
             padding: 40px 20px;
-            background: #1c1f2b;
+            background: #1a202c;
             border-top: 1px solid rgba(255, 255, 255, 0.1);
             margin-top: 0;
         }
