menghapus tampilan scroll di pojok kanan di bagian materi

--- a/public/materi.html
+++ b/public/materi.html
@@ -512,10 +512,12 @@
 
       <!-- Tombol untuk menampilkan jawaban -->
       <div class="text-center mb-3">
-        <button id="toggleJawabanBtn" class="btn btn-primary px-4">
-          🔍 Tampilkan Jawaban
-        </button>
-      </div>
+        <div class="nav nav-pills justify-content-center">
+          <button id="toggleJawabanBtn" class="nav-link px-4">
+            Tampilkan Jawaban
+          </button>
+        </div>
+      </div>      
 
       <!-- Jawaban disembunyikan dulu -->
       <div id="jawabanContainer" style="display: none; animation: fadeIn 0.6s ease;">
