--- a/public/latihan.html
+++ b/public/latihan.html
@@ -40,7 +40,7 @@
   <!-- scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/template.js"></script>
-
+  <script src="js/soal.js"></script>
   <script src="js/latihan.js"></script>
 </body>
 
