--- a/public/latihan.html
+++ b/public/latihan.html
@@ -7,6 +7,7 @@
   <title>Latihan Final - Alokasi Memori</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="css/latihan.css">
 
 </head>
@@ -33,7 +34,38 @@
     <div id="quizRoot" class="question-area"></div>
 
     <div class="mt-3 d-flex justify-content-end gap-2">
+      <button id="adminBtn" class="admin-btn-minimal" title="Aktifkan Mode Petunjuk">
+        <i class="bi bi-shield-lock-fill"></i> </button>
       <button id="nextBtn" disabled>Soal Selanjutnya →</button>
+    </div>
+  </div>
+
+  <div id="globalToastContainer" class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1050;">
+    </div>
+
+  <div id="adminModalOverlay" class="admin-modal-overlay">
+    <div id="adminModalBox" class="admin-modal-box">
+      <h2>Admin Login</h2>
+      <p class="admin-modal-desc">Masukkan kredensial untuk mengaktifkan mode petunjuk.</p>
+      
+      <div class="admin-form-group">
+        <label for="adminUsername">Username</label>
+        <input type="text" id="adminUsername" class="admin-form-control">
+      </div>
+      <div class="admin-form-group">
+        <label for="adminPassword">Password</label>
+        <div class="admin-password-wrapper">
+          <input type="password" id="adminPassword" class="admin-form-control">
+          <i id="togglePassword" class="bi bi-eye-fill admin-toggle-pass" title="Tampilkan password"></i>
+        </div>
+      </div>
+      
+      <div id="adminModalMessage"></div>
+
+      <div class="admin-modal-buttons">
+        <button id="adminBatalBtn" class="btn-modal-batal">Batal</button>
+        <button id="adminLoginBtn" class="btn-modal-login">Login</button>
+      </div>
     </div>
   </div>
 
