--- a/public/latihan.html
+++ b/public/latihan.html
@@ -34,7 +34,7 @@
     <div id="quizRoot" class="question-area"></div>
 
     <div class="mt-3 d-flex justify-content-end gap-2">
-      <button id="adminBtn" class="admin-btn-minimal" title="Aktifkan Mode Petunjuk">
+      <button id="adminBtn" class="admin-btn-minimal" title="Aktifkan Mode Admin">
         <i class="bi bi-shield-lock-fill"></i> </button>
       <button id="nextBtn" disabled>Soal Selanjutnya →</button>
     </div>
@@ -46,7 +46,7 @@
   <div id="adminModalOverlay" class="admin-modal-overlay">
     <div id="adminModalBox" class="admin-modal-box">
       <h2>Admin Login</h2>
-      <p class="admin-modal-desc">Masukkan kredensial untuk mengaktifkan mode petunjuk.</p>
+      <p class="admin-modal-desc">Masukkan kredensial untuk mengaktifkan mode Admin.</p>
       
       <div class="admin-form-group">
         <label for="adminUsername">Username</label>
