--- a/public/profil.html
+++ b/public/profil.html
@@ -44,7 +44,8 @@
             <div class="avatar">F</div>
             <h5>Fadhli</h5>
           </div>
-
+        </div>
+        <div class="team-row">
           <div class="member-card ripki">
             <div class="avatar flip">
               <span class="front">R</span>
