--- a/public/index.html
+++ b/public/index.html
@@ -1,108 +1,174 @@
 <!DOCTYPE html>
-<html lang="en">
-
-
-<!-- FARIEZ LOVE LOVE RIRI -->
+<html lang="id">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Alloc</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alloc — Landing Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/landingPage.css">
+
 </head>
 
 <body>
-  <!-- Tempat navbar akan dimuat -->
-  <div id="navbar-container"></div>
+    <!-- Header -->
+    <!-- <header>
+        <h1>Alloc</h1>
+        <button class="mobile-menu-toggle" id="mobileMenuToggle" onclick="toggleMobileMenu()">
+            <span></span><span></span><span></span>
+        </button>
+        <nav id="navMenu">
+            <button class="close-btn" onclick="closeMobileMenu()">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M18 6L6 18M6 6l12 12" />
+                </svg>
+            </button>
+            <a href="#" class="active" onclick="closeMobileMenu()">Simulasi</a>
+            <a href="#" onclick="closeMobileMenu()">Materi</a>
+            <a href="#" onclick="closeMobileMenu()">Latihan</a>
+            <a href="#" onclick="closeMobileMenu()">Profil</a>
+        </nav>
+    </header> -->
 
-  <div class="memoalloc-card mt-5">
-    <h2>Simulasi Contiguous Memory Allocation</h2>
+    <div id="navbar-container"></div>
 
-    <div class="mb-3">
-      <h5 class="mb-3">Algoritma</h5>
-      <select class="form-select">
-        <option>First-Fit</option>
-        <option>Best-Fit</option>
-        <option>Worst-Fit</option>
-      </select>
-    </div>
-
-    <div class="row">
-      <!-- Bagian Partitions -->
-      <div class="col-md-6 mb-4">
-        <h5>Partisi</h5>
-        <div class="d-flex align-items-end flex-wrap mb-2">
-          <div class="partition-input">
-            <input type="number" id="partitionSize" name="partitionSize" class="form-control"
-              placeholder="Enter Partition Size">
-          </div>
-          <button class="circle-btn btn-add" id="addPartition">+</button>
+    <!-- CTA Section -->
+    <section class="cta-section">
+        <div class="cta-container">
+            <div class="cta-text">
+                <h2>Pahami Memory Allocation<br>Dengan Visualisasi</h2>
+                <p>Belajar konsep manajemen memori dalam sistem operasi melalui simulasi interaktif algoritma First-Fit,
+                    Best-Fit, dan Worst-Fit</p>
+            </div>
+            <div class="cta-buttons">
+                <a href="simulasi.html" class="cta-btn text-decoration-none">
+                    <svg width="20" height="20" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z" />
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                    </svg>
+                    Mulai Simulasi
+                </a>
+                <a href="materi.html" class="cta-btn text-decoration-none">
+                    <svg width="20" height="20" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
+                    </svg>
+                    Pelajari Algoritma
+                </a>
+            </div>
         </div>
+    </section>
 
-        <table class="table align-middle mt-3">
-          <thead>
-            <tr>
-              <td>Nama</td>
-              <td>Ukuran (KB)</td>
-              <td>Aksi</td>
-            </tr>
-          </thead>
-          <tbody id="partitionTableBody"></tbody>
-        </table>
-      </div>
-
-      <!-- Bagian Processes -->
-      <div class="col-md-6 mb-4">
-        <h5>Proses</h5>
-        <div class="d-flex align-items-end flex-wrap mb-2">
-          <div class="partition-input">
-            <input type="number" id="processSize" name="processSize" class="form-control"
-              placeholder="Enter Process Size">
-          </div>
-          <button class="circle-btn btn-add" id="addProcess">+</button>
+    <!-- Hero Section -->
+    <section class="hero">
+        <h2>Tentang Manajemen Memori</h2>
+        <div class="info-box">
+            <p>Manajemen memori adalah fungsi fundamental dari sebuah Sistem Operasi. Tujuannya adalah untuk mengelola
+                memori utama (RAM) secara efisien, mengalokasikan ruang yang aman untuk setiap proses, dan
+                membebaskannya kembali saat tidak lagi diperlukan.</p>
         </div>
+        <div class="info-box flex">
+            <div class="icon-wrapper">
+                <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="#7c5cff" stroke-width="2">
+                    <path d="M12 2L2 7l10 5 10-5-10-5z" />
+                    <path d="M2 17l10 5 10-5" />
+                    <path d="M2 12l10 5 10-5" />
+                </svg>
+            </div>
+            <div>
+                <p>Platform ini hadir untuk mempermudah pemahaman proses tersebut. Kami mengubah teori alokasi yang
+                    abstrak menjadi simulasi visual interaktif, memungkinkan Anda untuk memahami dan membandingkan cara
+                    kerja setiap algoritma secara langsung.</p>
+            </div>
+        </div>
+    </section>
 
-        <table class="table align-middle mt-3">
-          <thead>
-            <tr>
-              <td>Nama</td>
-              <td>Ukuran (KB)</td>
-              <td>Aksi</td>
-            </tr>
-          </thead>
-          <tbody id="processTableBody"></tbody>
-        </table>
-      </div>
-    </div>
+    <!-- Algorithms Section -->
+    <section class="algorithms-section">
+        <div class="algorithms-container">
+            <h2>Algoritma yang Didukung</h2>
+            <p>Pahami tiga metode alokasi memori dinamis yang fundamental.</p>
+            <div class="algorithms-cards">
+                <div class="algorithm-card">
+                    <div class="algorithm-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="#7c5cff" stroke-width="2">
+                            <path d="M13 2L3 14h8l-1 8 10-12h-8l1-8z" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                    </div>
+                    <h3>First-Fit Algorithm</h3>
+                    <p>Strategi alokasi tercepat. Algoritma ini menelusuri memori secara berurutan dan menggunakan blok
+                        kosong pertama yang ukurannya cukup untuk menampung proses.</p>
+                </div>
+                <div class="algorithm-card">
+                    <div class="algorithm-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="#7c5cff" stroke-width="2">
+                            <rect x="3" y="4" width="18" height="18" rx="2" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path d="M9 9h6v6H9V9z" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                    </div>
+                    <h3>Best-Fit Algorithm</h3>
+                    <p>Fokus pada efisiensi ruang. Algoritma ini memeriksa seluruh blok memori yang tersedia untuk
+                        menemukan dan menggunakan blok kosong terkecil yang ukurannya masih memadai.</p>
+                </div>
+                <div class="algorithm-card">
+                    <div class="algorithm-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="#7c5cff" stroke-width="2">
+                            <path
+                                d="M4 7v10c0 2.21 3.582 4 8 4s8-1.79 8-4V7M4 7c0 2.21 3.582 4 8 4s8-1.79 8-4M4 7c0-2.21 3.582-4 8-4s8 1.79 8 4"
+                                stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M4 12c0 2.21 3.582 4 8 4s8-1.79 8-4" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg>
+                    </div>
+                    <h3>Worst-Fit Algorithm</h3>
+                    <p>Bertujuan menyisakan sisa blok terbesar. Algoritma ini menelusuri semua blok kosong yang tersedia
+                        dan secara strategis memilih blok terbesar yang ada untuk alokasi proses yang diminta.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <button class="btn btn-pink mt-3 w-100">MULAI SIMULASI</button>
+    <!-- Footer -->
+    <footer>
+        <p>© 2025 Alloc — Simulasi Memory Allocation.</p>
+    </footer>
 
-  </div>
+    <script src="js/script.js"></script>
 
-  <div class="result-card mt-5 d-none">
-    <h2 style="color: white;">Hasil Simulation</h2>
-    <table class="table align-middle" id="resultTable">
-      <thead>
-        <tr>
-          <td>Partisi</td>
-          <td>Ukuran Partisi (KB)</td>
-          <td>Proses</td>
-          <td>Ukuran Proses (KB)</td>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-
-    <p id="resultExplanation" class="mt-3"></p>
-
-    <button id="backButton" class="btn btn-pink mt-3">← Kembali</button>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="js/template.js"></script>
-
-  <script src="js/script.js"></script>
+    <script>
+        function toggleMobileMenu() {
+            const nav = document.getElementById('navMenu');
+            const toggle = document.getElementById('mobileMenuToggle');
+            nav.classList.toggle('active');
+            toggle.classList.toggle('active');
+        }
+        function closeMobileMenu() {
+            const nav = document.getElementById('navMenu');
+            const toggle = document.getElementById('mobileMenuToggle');
+            nav.classList.remove('active');
+            toggle.classList.remove('active');
+        }
+        const navLinks = document.querySelectorAll('nav a');
+        navLinks.forEach(link => {
+            link.addEventListener('click', function (e) {
+                navLinks.forEach(l => l.classList.remove('active'));
+                this.classList.add('active');
+            });
+        });
+        document.addEventListener('click', function (event) {
+            const nav = document.getElementById('navMenu');
+            const toggle = document.getElementById('mobileMenuToggle');
+            const isClickInsideNav = nav.contains(event.target);
+            const isClickOnToggle = toggle.contains(event.target);
+            if (!isClickInsideNav && !isClickOnToggle && nav.classList.contains('active')) {
+                closeMobileMenu();
+            }
+        });
+    </script>
 </body>
-
-</html>
