--- a/public/materi.html
+++ b/public/materi.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Materi Memory Allocation</title>
+  <title>Alloc — Materi</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 
@@ -17,7 +17,7 @@
   <div id="navbar-container"></div>
 
   <main class="materi-container py-4">
-    <h1 class="text-center class mt-5 fw-bold text-light">Materi Memory Allocation</h1>
+    <h1 class="text-center class mt-3 fw-bold text-light">Materi Memory Allocation</h1>
 
     <!-- 🔹 Navigasi Sub-Page -->
     <nav class="nav nav-pills justify-content-center mb-4 flex-wrap">
