--- a/public/latihan.html
+++ b/public/latihan.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="Latihan interaktif alokasi memori dengan kuis drag & drop.">
-  <title>Latihan Final - Alokasi Memori</title>
+  <title>Alloc — Latihan Interaktif</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -19,7 +19,7 @@
  <div class="card-quiz">
     <div class="top-row">
       <div>
-        <h2 class="quiz-title-clean">Latihan Interaktif: Alokasi Memori</h2>
+        <h2 class="quiz-title-clean">Latihan Interaktif: Memory Allocation</h2>
       </div>
       
       <div class="progress-wrapper" id="progressWrapper">
