--- a/public/simulasi.html
+++ b/public/simulasi.html
@@ -80,7 +80,7 @@
   </div>
 
   <div class="result-card mt-5 d-none">
-    <h2 style="color: white;">Hasil Simulation</h2>
+    <h2 style="color: white;">Hasil Simulasi</h2>
     <table class="table align-middle" id="resultTable">
       <thead>
         <tr>
