--- a/public/materi.html
+++ b/public/materi.html
@@ -7,9 +7,7 @@
   <title>Alloc — Materi</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-
-
-
+  <link rel="preload" href="/templates/navbar.html" as="fetch">
 </head>
 
 <body>
