--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <title>Alloc — Landing Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/landingPage.css">
     <link rel="preload" href="/templates/navbar.html" as="fetch">
@@ -33,7 +34,27 @@
         </nav>
     </header> -->
 
-    <div id="navbar-container"></div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm">
+        <div class="container">
+            <a class="navbar-brand brand" style="font-size: 28px; font-weight: 550;" href="index.html">
+                A<span style="color: #7c5cff;">lloc</span>
+            </a>
+
+            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNavDropdown">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link text-white" href="simulasi.html">Simulasi</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="materi.html">Materi</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="latihan.html">Latihan</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="profil.html">Profil</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <!-- CTA Section -->
     <section class="cta-section">
