--- a/public/materi.html
+++ b/public/materi.html
@@ -12,7 +12,27 @@
 
 <body>
   <!-- Tempat navbar akan dimuat -->
-  <div id="navbar-container"></div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm">
+    <div class="container">
+      <a class="navbar-brand brand" style="font-size: 28px; font-weight: 550;" href="index.html">
+        A<span style="color: #7c5cff;">lloc</span>
+      </a>
+
+      <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarNavDropdown">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link text-white" href="simulasi.html">Simulasi</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="materi.html">Materi</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="latihan.html">Latihan</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="profil.html">Profil</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
   <main class="materi-container py-4">
     <h1 class="text-center class mt-3 fw-bold text-light">Materi Memory Allocation</h1>
@@ -515,7 +535,7 @@
             Tampilkan Jawaban
           </button>
         </div>
-      </div>      
+      </div>
 
       <!-- Jawaban disembunyikan dulu -->
       <div id="jawabanContainer" style="display: none; animation: fadeIn 0.6s ease;">
