--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,6 @@
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/landingPage.css">
-    <link rel="preload" href="/templates/navbar.html" as="fetch">
 </head>
 
 <body>
@@ -159,6 +158,8 @@
     <footer>
         <p>© 2025 Alloc — Simulasi Memory Allocation.</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="js/script.js"></script>
 
